WIP: Compile 4.x driver with java11 (todo: support java-8 and java-11 under the same pom.xml)
Update to api-plumber-doclet 2.0 (todo: remove dependence on SNAPSHOT build)